--- a/Map.html
+++ b/Map.html
@@ -918,7 +918,7 @@ const mexicoMarker = new mapboxgl.Marker({
 mexicoMarker.getElement().addEventListener('click', () => {
     openPopup(`
         <div class="popup-content">
-            <img src="multiple.webp" alt="Henkel Solidaridad Partnership" />
+            <img src="columbia.webp" alt="Henkel Solidaridad Partnership" />
             <p><strong>Brand: </strong> Henkel Consumer Brands</p>
             <p><strong>Partner: </strong> Solidaridad</p>
             <p><strong>Location: </strong> Mexico</p>
@@ -941,7 +941,7 @@ const hondurasMarker = new mapboxgl.Marker({
 hondurasMarker.getElement().addEventListener('click', () => {
     openPopup(`
         <div class="popup-content">
-            <img src="multiple.webp" alt="Henkel Solidaridad Partnership" />
+            <img src="columbia.webp" alt="Henkel Solidaridad Partnership" />
             <p><strong>Brand: </strong> Henkel Consumer Brands</p>
             <p><strong>Partner: </strong> Solidaridad</p>
             <p><strong>Location: </strong> Honduras</p>
@@ -987,7 +987,7 @@ const nicaraguaMarker = new mapboxgl.Marker({
 nicaraguaMarker.getElement().addEventListener('click', () => {
     openPopup(`
         <div class="popup-content">
-            <img src="multiple.webp" alt="Henkel Solidaridad Partnership" />
+            <img src="columbia.webp" alt="Henkel Solidaridad Partnership" />
             <p><strong>Brand: </strong> Henkel Consumer Brands</p>
             <p><strong>Partner: </strong> Solidaridad</p>
             <p><strong>Location: </strong> Nicaragua</p>
@@ -1010,7 +1010,7 @@ const ghanaMarker = new mapboxgl.Marker({
 ghanaMarker.getElement().addEventListener('click', () => {
     openPopup(`
         <div class="popup-content">
-            <img src="multiple.webp" alt="Henkel Solidaridad Partnership" />
+            <img src="columbia.webp" alt="Henkel Solidaridad Partnership" />
             <p><strong>Brand: </strong> Henkel Consumer Brands</p>
             <p><strong>Partner: </strong> Solidaridad</p>
             <p><strong>Location: </strong> Ghana</p>
@@ -1033,7 +1033,7 @@ const nigeriaMarker = new mapboxgl.Marker({
 nigeriaMarker.getElement().addEventListener('click', () => {
     openPopup(`
         <div class="popup-content">
-            <img src="multiple.webp" alt="Henkel Solidaridad Partnership" />
+            <img src="columbia.webp" alt="Henkel Solidaridad Partnership" />
             <p><strong>Brand: </strong> Henkel Consumer Brands</p>
             <p><strong>Partner: </strong> Solidaridad</p>
             <p><strong>Location: </strong> Nigeria</p>
@@ -1056,7 +1056,7 @@ const indonesiaMarker = new mapboxgl.Marker({
 indonesiaMarker.getElement().addEventListener('click', () => {
     openPopup(`
         <div class="popup-content">
-            <img src="multiple.webp" alt="Henkel Solidaridad Partnership" />
+            <img src="columbia.webp" alt="Henkel Solidaridad Partnership" />
             <p><strong>Brand: </strong> Henkel Consumer Brands</p>
             <p><strong>Partner: </strong> Solidaridad</p>
             <p><strong>Location: </strong> Indonesia</p>
